kubernetes/szilardshome/temp/my-apps/development/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
  labels:
    app.kubernetes.io/name: it-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: it-tools
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: it-tools
    spec:
      containers:
      - name: it-tools
        image: ghcr.io/sharevb/it-tools:nightly@sha256:2936b7cfc9d85dc85e4e2d0d4dc95c8ae2efaf17c4c3f2dc1007bb991a89888f
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "100m" 
            memory: "128Mi" 
          limits:
            cpu: "500m" 
            memory: "256Mi"
